--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-side-menu": "^1.1.3",
+    "react-native-swiper": "^1.5.13",
+    "react-native-vector-icons": "^4.4.3",
+    "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
