--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-native-orientation": "^3.1.0",
     "react-native-side-menu": "^1.1.3",
     "react-native-swiper": "^1.5.13",
+    "react-native-tab-view": "0.0.73",
     "react-native-vector-icons": "^4.4.3",
+    "react-native-video": "^2.0.0",
+    "react-native-video-controls": "^2.0.1",
     "react-navigation": "^1.0.0-beta.21",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
