--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=netflix.keystore
+MYAPP_RELEASE_KEY_ALIAS=netflix
+MYAPP_RELEASE_STORE_PASSWORD=netflix
+MYAPP_RELEASE_KEY_PASSWORD=netflix
